bump Java -> 17 now that GraalVM supports it, Graal/Truffle -> 21.3, Kotlin to 1.6.10, Gradle